making prompt dynamic
