# code/static/swagger.yaml
@@ -63,6 +63,11 @@ paths:
                   type: string
                   description: The type of the query/agent required
                   example: "sales"
+                address:
+                  type: string
+                  description: Domain address of the original request
+                  example: "example.com"
+
       responses:
         "200":
           description: Successful response from the chatbot
@@ -79,7 +84,7 @@ paths:
                     description: Bot response message
                     example: "Hi there! How can I help you today?"
         "400":
-          description: Invalid input error
+          description: Invalid input or address does not exist
           content:
             application/json:
               schema:
@@ -90,7 +95,14 @@ paths:
                     example: false
                   error:
                     type: string
-                    example: "Input cannot be empty."
+                oneOf:
+                  - properties:
+                      error:
+                        example: "Input cannot be empty."
+                  - properties:
+                      error:
+                        example: "Enter correct address."
+
         "500":
           description: Server error during LLM call
           content:
